--- a/task.html
+++ b/task.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transform&Transition</title>
+    <title>Transition Properties</title>
     <link rel="stylesheet" href="./style1.css">
 </head>
 
